--- a/index.html
+++ b/index.html
@@ -1,50 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="assets/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Music is Fun</title>
-</head>
+  </head>
 
-<body class="container-fluid">
-
+  <body class="container-fluid">
     <header class="row">
-        <div class="col-12 bannerStyle">
-            <p>Music is Fun</p>
-        </div>
-        <div class="offset-8 col-4">
-            <form onsubmit="app.controllers.SongsController.search(event)">
-                <input type="text" class="form-control" name="query" placeholder="Search For Music">
-            </form>
-            <button class="btn btn-success mt-1 form-control" type="submit">Search</button>
-        </div>
+      <div class="col-12 bannerStyle">
+        <p>Music is Fun</p>
+      </div>
+      <div class="offset-8 col-4">
+        <form onsubmit="app.songsController.search(event)">
+          <input
+            type="text"
+            class="form-control"
+            name="query"
+            placeholder="Search For Music"
+          />
+        </form>
+        <button class="btn btn-success mt-1 form-control" type="submit">
+          Search
+        </button>
+      </div>
     </header>
 
     <main class="row">
-        <div class="col-6">
-            <h3 class="text-center">Search Results</h3>
-            <div id="songs" class="col-12 m-0">
-                <!-- template to generate -->
-            </div>
+      <div class="col-6">
+        <h3 class="text-center">Search Results</h3>
+        <div id="songs" class="col-12 m-0">
+          <!-- template to generate -->
         </div>
-        <div class="col-6">
-            <h3 class="text-center">Playlist</h3>
-            <div class="col-12 m-0" id="playlist">
-                <!-- template for playlist -->
-            </div>
+      </div>
+      <div class="col-6">
+        <h3 class="text-center">Playlist</h3>
+        <div class="col-12 m-0" id="playlist">
+          <!-- template for playlist -->
         </div>
+      </div>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"
-        integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk=" crossorigin="anonymous"></script>
-    <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous">
-        </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"
+      integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"
+      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+      crossorigin="anonymous"
+    ></script>
     <script src="app/main.js" type="module"></script>
-</body>
-
+  </body>
 </html>
